header on safari bug fixed

--- a/gbs/css/style.css
+++ b/gbs/css/style.css
@@ -587,7 +587,6 @@ a.navbar-item:hover,  a.navbar-item.is-active, .navbar-brand .navbar-link:hover,
     margin-left: 5px;
     margin-right: 5px;
     margin-bottom: 20px;
-
 }
 .compensate-for-scrollbar {
     margin-right: 0px !important;
@@ -627,7 +626,6 @@ a.navbar-item:hover,  a.navbar-item.is-active, .navbar-brand .navbar-link:hover,
     -webkit-transform:translate(0, 0);
 }
 
-/*Directions*/
 .slide-top .final__slide-content{
     transform:translate(0, -100%);
     -webkit-transform:translate(0, -100%);
@@ -663,11 +661,9 @@ a.navbar-item:hover,  a.navbar-item.is-active, .navbar-brand .navbar-link:hover,
 
 }
 .menu-media__wave{
-{
     position: absolute;
     bottom: 0;
     right: 0;
-}
 }
 .gbs-tree-wrapper{
     padding-top:45px;
@@ -1372,7 +1368,7 @@ a.navbar-item:hover,  a.navbar-item.is-active, .navbar-brand .navbar-link:hover,
     height: 81px;
     position: absolute;
     margin-left: -43px;
-    top:34px;
+    top:100px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1393,6 +1389,12 @@ a.navbar-item:hover,  a.navbar-item.is-active, .navbar-brand .navbar-link:hover,
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+}
+@supports (-webkit-overflow-scrolling: touch) {
+    /* CSS specific to iOS devices */
+    .gbs-hero-text-container-header-technology{
+        top:100px;
+    }
 }
 .gbs-hero-text-container-header h1{
     color:#FFFFFF;
@@ -2093,11 +2095,7 @@ a.navbar-item:hover,  a.navbar-item.is-active, .navbar-brand .navbar-link:hover,
         margin-top: 170%;
     }
 }
-@media print {
-    a[href]:after {
-        content: " (" attr(href) ") ";
-    }
-}
+
 @media screen and (orientation:portrait) {
     .gbs-owl-slide-text-container{
         margin-top: 40%;
